--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nativescript-jwplayer",
-  "version": "0.0.1",
+  "version": "0.0.2-0",
   "description": "JW Player for nativescript",
   "main": "index.js",
   "typings": "index.d.ts",
